@@ -3,6 +3,10 @@
 
 dialogfe (05 Jan 2005):
 
+  24 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Added hostname, domainname, and nisdomainname to networking list.
+  Added a stage_tarball selection patch from zahna.
+
   23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed crash bug if you cancel from the partition type selection menu. Added
   timezone patch from zahna.
